--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss-loader": "^0.8.0",
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.14.7",
+    "react-addons-shallow-compare": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
